# fastapprox-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
benches/: tests.rs
fastapprox/: Cargo.toml
fastapprox/src/: bits.rs  lib.rs
fastapprox/src/fast/: mod.rs
fastapprox/src/faster/: mod.rs
fastapprox_tests/: Cargo.toml  build.rs
fastapprox_tests/benches/: tests.rs
fastapprox_tests/tests/: compare.rs
fastapprox_tests/tests/c/: fastapprox.c
src/: bits.rs  lib.rs
src/fast/: mod.rs
src/faster/: mod.rs
tests/: compare.rs
tests/c/: mod.rs
