[package]
name = "fastapprox"
description = "Fast approximate versions of certain functions that arise in machine learning"
version = "0.2.0"
authors = ["Alexey Suslov <alexey.suslov@gmail.com>"]
license = "MIT"
repository = "https://github.com/loony-bean/fastapprox-rs"
keywords = ["math", "machine-learning", "approximation"]

[badges]
travis-ci = { repository = "loony-bean/fastapprox-rs", branch = "master" }
