[package]
name = "fastapprox"
description = "Fast approximate versions of certain functions that arise in machine learning"
version = "0.3.1"
authors = ["Alexey Suslov <alexey.suslov@gmail.com>"]
license = "MIT"
repository = "https://github.com/loony-bean/fastapprox-rs"
keywords = ["math", "machine-learning", "approximation"]
edition = "2021"
