[package]
name = "fastapprox_tests"
description = "Test suite for fastapprox crate"
version = "0.1.0"
authors = ["Alexey Suslov <alexey.suslov@gmail.com>"]
license = "MIT"
repository = "https://github.com/loony-bean/fastapprox-rs"
keywords = ["math", "machine-learning", "approximation"]
edition = "2018"

[dependencies]
fastapprox = { path = "../fastapprox" }

[[bench]]
name = "tests"
harness = false

[build-dependencies]
gcc = "0.3.54"

[dev-dependencies]
bencher = "0.1.4"
special = "0.7.7"
statrs = "0.9.0"
