[package]
name = "fastapprox_tests"
description = "Test suite for fastapprox crate"
version = "0.3.1"
authors = ["Alexey Suslov <alexey.suslov@gmail.com>"]
license = "MIT"
repository = "https://github.com/loony-bean/fastapprox-rs"
keywords = ["math", "machine-learning", "approximation"]
edition = "2021"

[dependencies]
fastapprox = { path = "../fastapprox" }

[[bench]]
name = "tests"
harness = false

[build-dependencies]
cc = "1"

[dev-dependencies]
bencher = "0.1.5"
special = "0.10"
statrs = "0.16"
